woodpile_includedir = $(includedir)/woodpile

woodpile_include_HEADERS = include/woodpile/list.h \
                           include/woodpile/queue.h \
                           include/woodpile/stack.h

include include/woodpile/dictionary/Makefile.am
include include/woodpile/list/Makefile.am
