test_function_list_suite_SOURCES = test/function/list_suite.c
test_function_list_suite_LDADD = $(test_libraries)

test_function_queue_suite_SOURCES = test/function/queue_suite.c
test_function_queue_suite_LDADD = $(test_libraries)

test_function_stack_suite_SOURCES = test/function/stack_suite.c
test_function_stack_suite_LDADD = $(test_libraries)

include test/function/list/Makefile.am
