woodpile_list_includedir = $(includedir)/woodpile/list

woodpile_list_include_HEADERS = include/woodpile/list/const_iterator.h \
                                include/woodpile/list/const_reverse_iterator.h \
                                include/woodpile/list/iterator.h \
                                include/woodpile/list/reverse_iterator.h
