test_function_list_const_iterator_suite_SOURCES = test/function/list/const_iterator_suite.c
test_function_list_const_iterator_suite_LDADD = $(test_libraries)

test_function_list_iterator_suite_SOURCES = test/function/list/iterator_suite.c
test_function_list_iterator_suite_LDADD = $(test_libraries)
